最終課題の提出

--- a/auth-layout.css
+++ b/auth-layout.css
@@ -1,10 +1,10 @@
 :root {
-  --primary-color: #4c1d95;
-  --secondary-color: #312e81;
+  --primary-color: #000000;
+  --secondary-color: #000000;
 }
 
 body {
-  background: linear-gradient(180deg, #1d2734 0%, #404a5d 100%);
+  background: linear-gradient(180deg, #000000 0%, #252526 100%);
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@ body {
 
 .btn-login:hover {
   transform: translateY(-2px);
-  box-shadow: 0 5px 20px rgba(99, 102, 241, 0.4);
+  box-shadow: 0 5px 20px rgba(55, 55, 56, 0.4);
   color: white !important;
 }
 
